--- a/admin-wizard.html
+++ b/admin-wizard.html
@@ -8,8 +8,8 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700;800;900&family=Playfair+Display:wght@700;900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="assets/css/styles.css?v=20260209a" />
-    <script src="assets/js/layout.js?v=20260209a" type="module"></script>
+    <link rel="stylesheet" href="assets/css/styles.css?v=20260214d" />
+    <script src="assets/js/layout.js?v=20260214d" type="module"></script>
   </head>
   <body data-page="admin-wizard">
     <div id="appHeader"></div>
@@ -27,7 +27,7 @@
             </div>
           </div>
           <div class="metaRow" style="margin-top: 10px; gap: 10px; flex-wrap: wrap">
-            <a class="btn-white-outline" href="esadmin.html">Panel admina</a>
+            <a class="btn-white-outline" href="admin-select.html">Centrum admina</a>
             <a class="btn-white-outline" href="import/a1-official-first-two.html" target="_blank" rel="noopener noreferrer">
               Seed A1 (2 tematy)
             </a>
@@ -382,7 +382,7 @@
           <div class="metaRow" style="margin-top: 12px; gap: 10px; flex-wrap: wrap">
             <a id="summaryLesson" class="btn-yellow" href="#">Admin lekcji</a>
             <a id="summaryExercises" class="btn-white-outline" href="#">Admin cwiczen</a>
-            <a class="btn-white-outline" href="esadmin.html">Panel admina</a>
+            <a class="btn-white-outline" href="admin-select.html">Centrum admina</a>
           </div>
         </section>
         </div>
