--- a/course.html
+++ b/course.html
@@ -9,7 +9,7 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700;800;900&family=Playfair+Display:wght@700;900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="assets/css/styles.css?v=20260209a" />
+    <link rel="stylesheet" href="assets/css/styles.css?v=20260214h" />
     <script src="assets/js/layout.js?v=20260209a" type="module"></script>
   </head>
 
@@ -50,7 +50,7 @@
             <div class="metaRow" style="gap: 10px; flex-wrap: wrap">
               <a
                 class="btn-white-outline"
-                href="admin-wizard.html"
+                href="admin-select.html"
                 id="adminQuickLesson"
                 style="display: none; text-decoration: none"
               >
@@ -110,7 +110,7 @@
     </div>
 
     <script type="module" src="assets/js/content-protect.js"></script>
-    <script type="module" src="assets/js/pages/course-page.js"></script>
+    <script type="module" src="assets/js/pages/course-page.js?v=20260214h"></script>
   </body>
 </html>
 
