--- a/esadmin.html
+++ b/esadmin.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8" />
     <title>Admin | AquiVivo</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-    <link href="assets/css/styles.css?v=20260208m" rel="stylesheet" />
-    <script src="assets/js/layout.js?v=20260208m" type="module"></script>
+    <link href="assets/css/styles.css?v=20260214d" rel="stylesheet" />
+    <script src="assets/js/layout.js?v=20260214d" type="module"></script>
   </head>
   <body data-page="esadmin">
     <div id="appHeader"></div>
@@ -17,7 +17,8 @@
             <div class="heroIcon">&#x1F6E0;&#xFE0F;</div>
             <div>
               <div class="metaRow" style="flex-wrap: wrap; gap: 10px">
-                <a class="btn-yellow" href="admin-wizard.html">Kreator</a>
+                <a class="btn-yellow" href="admin-select.html">Centrum admina</a>
+                <a class="btn-white-outline" href="admin-wizard.html">Kreator</a>
                 <a class="btn-white-outline" href="#accUsers">Uzytkownicy</a>
                 <a class="btn-white-outline" href="#accPromo">Kody promo</a>
                 <a class="btn-white-outline" href="#accSegments">Segmentacja</a>
@@ -1409,7 +1410,7 @@
       </div>
     </div>
     <script src="assets/js/firebase-init.js" type="module"></script>
-    <script src="assets/js/pages/esadmin-page.js?v=20260206a" type="module"></script>
+    <script src="assets/js/pages/esadmin-page.js?v=20260214d" type="module"></script>
   </body>
 </html>
 
