--- a/kurs-pl.html
+++ b/kurs-pl.html
@@ -9,7 +9,7 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700;800;900&family=Playfair+Display:wght@700;900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="assets/css/styles.css?v=20260209a" />
+    <link rel="stylesheet" href="assets/css/styles.css?v=20260214h" />
     <script src="assets/js/layout.js?v=20260209a" type="module"></script>
   </head>
 
@@ -108,6 +108,6 @@
     </div>
 
     <script type="module" src="assets/js/content-protect.js"></script>
-    <script type="module" src="assets/js/pages/kurs-pl-page.js"></script>
+    <script type="module" src="assets/js/pages/kurs-pl-page.js?v=20260214h"></script>
   </body>
 </html>
