--- a/lesson.html
+++ b/lesson.html
@@ -16,7 +16,7 @@
           <h1 class="sectionTitle" style="margin-top: 0">Lección</h1>
           <div class="subtitle">
             Esta ruta es antigua. Usa <b>lessonpage.html</b> para ver la lección
-            y <b>lessonadmin.html</b> para editarla.
+            y <b>admin-select.html</b> para edicion.
           </div>
           <div class="metaRow" style="margin-top: 14px">
             <a class="btn-yellow" href="espanel.html">Libreta</a>
