--- a/lessonadmin.html
+++ b/lessonadmin.html
@@ -12,8 +12,8 @@
       rel="stylesheet"
     />
 
-    <link rel="stylesheet" href="assets/css/styles.css?v=20260208m" />
-    <script src="assets/js/layout.js?v=20260208m" type="module"></script>
+    <link rel="stylesheet" href="assets/css/styles.css?v=20260214d" />
+    <script src="assets/js/layout.js?v=20260214d" type="module"></script>
   </head>
 
   <body data-page="lessonadmin">
@@ -48,7 +48,7 @@
             <a id="btnBackCourse" class="btn-white-outline" href="#">Kurs</a>
             <a id="btnOpenLesson" class="btn-yellow" href="#">Podglad lekcji</a>
             <a id="btnOpenExercises" class="btn-white-outline" href="#"
-              >Admin cwiczen</a
+              >Centrum cwiczen</a
             >
             <button id="btnPublish" class="btn-red" type="button">
               Opublikuj
