--- a/lessonpage.html
+++ b/lessonpage.html
@@ -11,7 +11,7 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700;800;900&family=Playfair+Display:wght@700;800;900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="assets/css/styles.css?v=20260209a" />
+    <link rel="stylesheet" href="assets/css/styles.css?v=20260214h" />
     <script src="assets/js/layout.js?v=20260209a" type="module"></script>
   </head>
 
@@ -37,7 +37,7 @@
                   id="pillAdminLink"
                   href="#"
                   style="display: none; text-decoration: none"
-                  >Admin leccion</a
+                  >Centrum admina</a
                 >
               </div>
 
@@ -114,7 +114,7 @@
     </main>
 
     <script type="module" src="assets/js/content-protect.js"></script>
-    <script type="module" src="assets/js/pages/lessonpage-page.js"></script>
+    <script type="module" src="assets/js/pages/lessonpage-page.js?v=20260214h"></script>
   </body>
 </html>
 
