--- a/recompensas.html
+++ b/recompensas.html
@@ -78,7 +78,7 @@
       </div>
     </div>
 
-    <script type="module" src="assets/js/pages/recompensas-page.js"></script>
+    <script type="module" src="assets/js/pages/recompensas-page.js?v=20260212a"></script>
   </body>
 </html>
 
