--- a/admin-wizard.html
+++ b/admin-wizard.html
@@ -31,6 +31,9 @@
             <a class="btn-white-outline" href="import/a1-official-first-two.html" target="_blank" rel="noopener noreferrer">
               Seed A1 (2 tematy)
             </a>
+            <a class="btn-white-outline" href="import/a1-starter-four-topics.html" target="_blank" rel="noopener noreferrer">
+              Starter A1 (4 tematy)
+            </a>
             <a class="btn-white-outline" href="import/a1-vocab-xlsx.html" target="_blank" rel="noopener noreferrer">
               Import A1 vocab (.xlsx)
             </a>
