--- a/ejercicio.html
+++ b/ejercicio.html
@@ -11,7 +11,7 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700;800;900&family=Playfair+Display:wght@700;800;900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="assets/css/styles.css?v=20260214h" />
+    <link rel="stylesheet" href="assets/css/styles.css?v=20260214s" />
     <script src="assets/js/layout.js?v=20260214h" type="module"></script>
   </head>
 
@@ -162,7 +162,13 @@
               Anterior
             </button>
             <button class="btn-yellow" id="btnImmNext" type="button">
-              Siguiente
+              Comprobar
+            </button>
+            <button class="btn-white-outline" id="btnImmDontKnow" type="button">
+              Nie wiem
+            </button>
+            <button class="btn-white-outline" id="btnResetCourse" type="button" style="display: none">
+              Resetear curso
             </button>
           </div>
         </section>
@@ -278,7 +284,7 @@
     </div>
 
     <script type="module" src="assets/js/content-protect.js"></script>
-    <script type="module" src="assets/js/pages/ejercicio-page.js?v=20260214g"></script>
+    <script type="module" src="assets/js/pages/ejercicio-page.js?v=20260214r"></script>
   </body>
 </html>
 
