--- a/kurs-pl.html
+++ b/kurs-pl.html
@@ -108,6 +108,6 @@
     </div>
 
     <script type="module" src="assets/js/content-protect.js"></script>
-    <script type="module" src="assets/js/pages/kurs-pl-page.js?v=20260214h"></script>
+    <script type="module" src="assets/js/pages/kurs-pl-page.js?v=20260214i"></script>
   </body>
 </html>
