--- a/mensajes.html
+++ b/mensajes.html
@@ -8,7 +8,7 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700;800;900&family=Playfair+Display:wght@700;900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="assets/css/styles.css?v=20260208m" />
+    <link rel="stylesheet" href="assets/css/styles.css?v=20260214i" />
     <script src="assets/js/layout.js?v=20260208m" type="module"></script>
   </head>
 
@@ -58,6 +58,12 @@
               <input type="checkbox" id="togglePush" />
               <span>Push activo</span>
             </label>
+          </div>
+
+          <div class="messages-broadcast">
+            <div class="sectionTitle" style="margin-top: 0">Mensajes del equipo</div>
+            <div class="muted">Antes estaba en Bandeja. Ahora lo encuentras aquí.</div>
+            <div class="inboxList" id="messagesInboxList" style="margin-top: 10px"></div>
           </div>
 
           <div class="messages-admin card" id="supportAdminBox" hidden>
@@ -260,7 +266,7 @@
       </div>
     </div>
 
-    <script type="module" src="assets/js/pages/mensajes-page.js"></script>
+    <script type="module" src="assets/js/pages/mensajes-page.js?v=20260214i"></script>
   </body>
 </html>
 
