--- a/perfil.html
+++ b/perfil.html
@@ -17,12 +17,11 @@
     <div id="appHeader"></div>
     <aside id="sidePanel" class="side-panel">
       <a href="espanel.html" data-page="panel">Libreta</a>
-      <a href="buscar.html" data-page="buscar">Buscar</a>
+      <a href="referidos.html" data-page="amigos">Amigos</a>
       <a href="perfil.html" data-page="profile" class="is-active">Perfil</a>
       <a href="espanel.html#cursos" data-page="cursos">Mis cursos</a>
       <a href="review.html" data-page="practicar">Practicar</a>
-      <a href="recompensas.html" data-page="recompensas">Recompensas</a>
-      <a href="referidos.html" data-page="referidos">Recomendar</a>
+      <a href="recompensas.html" data-page="recompensas">Pasaporte</a>
       <a href="ajustes.html" data-page="ajustes">Ajustes</a>
       <a href="pagos.html" data-page="pagos">Pagos</a>
       <a href="ayuda.html" data-page="ayuda">Ayuda</a>
