--- a/espanel.html
+++ b/espanel.html
@@ -1,4 +1,4 @@
-<!doctype html>
+﻿<!doctype html>
 <html lang="es">
   <head>
     <meta charset="utf-8" />
@@ -27,10 +27,10 @@
                 </div>
                 <div>
                   <h1 class="glow-text" id="panelTitle" style="margin: 0; font-size: 44px">
-                    ¡Buenas!
+                    Â¡Buenas!
                   </h1>
                   <div class="muted" id="panelSubtitle" style="margin-top: 6px">
-                    Aquí tienes tu libreta!<br />¡Qué chimba verte!
+                    AquÃ­ tienes tu libreta!<br />Â¡QuÃ© chimba verte!
                   </div>
                   <div class="metaRow" style="margin-top: 10px; gap: 10px; flex-wrap: wrap">
                     <button class="btn-white-outline" id="btnAvatarUpload" type="button">
@@ -52,7 +52,7 @@
                 <span
                   ><b id="userEmail">...</b>
                   <span id="adminBadge" style="margin-left: 10px"
-                    >(admin: —)</span
+                    >(admin: â€”)</span
                   ></span
                 >
 
@@ -69,242 +69,54 @@
               </div>
             </div>
             <div class="panelOverviewGrid">
-            <div class="card" id="trialCard">
-              <div class="sectionTitle" style="margin-top: 0">
-                Prueba gratis A1
+              <div class="card" id="trialCard">
+                <div class="sectionTitle" style="margin-top: 0">
+                  Prueba gratis A1
+                </div>
+                <div class="metaRow" style="margin-top: 10px; gap: 10px; flex-wrap: wrap">
+                  <button class="btn-yellow" id="btnTrialA1" type="button">
+                    Activa A1 gratis 7 dias
+                  </button>
+                </div>
+                <div class="hintSmall" id="trialMsg" style="margin-top: 8px; display: none"></div>
               </div>
-              <div class="metaRow" style="margin-top: 10px; gap: 10px; flex-wrap: wrap">
-                <button class="btn-yellow" id="btnTrialA1" type="button">
-                  Activa A1 gratis 7 días
-                </button>
-              </div>
-              <div class="hintSmall" id="trialMsg" style="margin-top: 8px; display: none"></div>
             </div>
-            <div class="card" id="lastActivityCard">
-              <div class="sectionTitle" style="margin-top: 0">
-                Última actividad
+            <div id="notificaciones"></div>
+          </div>
+          <div class="referralSide">
+            <div class="card">
+              <div class="sectionTitle" style="margin-top: 0">Amigos</div>
+              <div class="muted">
+                Busqueda, invitaciones y recomendacion en una sola pestana.
               </div>
-              <div class="muted" id="lastActivityWhen">—</div>
-              <div
-                style="margin-top: 10px; font-weight: 900"
-                id="lastActivityTitle"
-              >
-                —
-              </div>
-              <div style="margin-top: 12px">
-                <a id="lastActivityLink" class="btn-white-outline" href="#"
-                  >Continuar</a
+              <div class="metaRow" style="margin-top: 12px; gap: 10px; flex-wrap: wrap">
+                <a class="btn-yellow" href="referidos.html" style="text-decoration: none">Abrir Amigos</a>
+                <a class="btn-white-outline" href="perfil.html?tab=friends" style="text-decoration: none"
+                  >Ver mi red</a
                 >
               </div>
             </div>
-            <div class="card" id="progressSummaryCard">
-              <div class="sectionTitle" style="margin-top: 0">Progreso</div>
-              <div
-                class="metaRow"
-                style="margin-top: 10px; gap: 10px; flex-wrap: wrap"
-              >
-                <span id="progTopics">Temas: -</span>
-                <span id="progCompleted">Completados: -</span>
-                <span id="progPractice">Práctica: -</span>
-                <span id="progTest">Test: -</span>
+
+            <div class="card">
+              <div class="sectionTitle" style="margin-top: 0">Mensajes</div>
+              <div class="muted">
+                Conversaciones, bandeja y avisos del equipo en un solo lugar.
               </div>
-              <div class="hintSmall" id="progLastActivity" style="margin-top: 8px">
-                Última actividad: -
+              <div class="metaRow" style="margin-top: 12px; gap: 10px; flex-wrap: wrap">
+                <a class="btn-yellow" href="mensajes.html" style="text-decoration: none">Abrir Mensajes</a>
               </div>
-            </div>
-            </div>
-            <div class="card" id="reviewSummaryCard">
-              <div class="sectionTitle" style="margin-top: 0">Repaso</div>
-              <div
-                class="metaRow"
-                style="margin-top: 10px; gap: 10px; flex-wrap: wrap"
-              >
-                <span id="reviewDue">Para hoy: -</span>
-                <span id="reviewOverdue">Atrasadas: -</span>
-                <span id="reviewNew">Nuevas: -</span>
-              </div>
-              <div class="hintSmall" id="reviewPlan" style="margin-top: 8px">
-                Plan: 10 min al día
-              </div>
-              <div id="reviewWeek" class="reviewWeek" style="margin-top: 10px"></div>
-              <div class="metaRow" style="margin-top: 12px; gap: 10px">
-                <a class="btn-yellow" href="review.html">Empezar 10 min</a>
-                <a class="btn-white-outline" href="flashcards.html">Fichas</a>
-                <a
-                  class="btn-white-outline"
-                  href="ajustes.html#repaso"
-                  aria-label="Ajustes de repaso"
-                  title="Ajustes de repaso"
-                  ></a>
-                <span class="hintSmall" id="reviewHint"></span>
-              </div>
-           </div>
-            <div id="notificaciones"></div>
-            <div class="card" id="inboxCard">
-              <div class="sectionTitle" style="margin-top: 0">Bandeja</div>
-              <div class="muted">Avisos y novedades del equipo AquiVivo.</div>
-              <div id="inboxList" class="inboxList" style="margin-top: 12px"></div>
-            </div>
-          </div>
-          <div class="referralSide">
-            <div id="mensajes"></div>
-            <div class="card" id="communityCard">
-              <div class="sectionTitle" style="margin-top: 0">Comunidad</div>
-              <div class="muted">Conecta con otros estudiantes, agrega amigos y charla.</div>
-              <div class="communityGrid" style="margin-top: 12px">
-                <div class="communityCol">
-                  <div class="subtitle" style="margin: 0">Tu codigo de amistad</div>
-                  <div class="metaRow" style="margin-top: 8px; gap: 10px; flex-wrap: wrap">
-                    <input id="friendCode" class="input" disabled style="max-width: 220px; font-weight: 900" />
-                    <button id="btnCopyFriendCode" class="btn-white-outline" type="button">Copiar</button>
-                    <button id="btnNewFriendCode" class="btn-white-outline" type="button">Nuevo</button>
-                  </div>
-                  <div id="friendCodeInfo" class="hintSmall" style="margin-top: 6px"></div>
-                  <div class="hr"></div>
-                  <div class="subtitle" style="margin: 0">Buscar personas</div>
-                  <div class="peopleSearchBar" style="margin-top: 10px">
-                    <div class="ps-avatar" id="communitySearchAvatar" aria-hidden="true">
-                      <img id="communitySearchAvatarImg" alt="" loading="lazy" />
-                      <span id="communitySearchAvatarFallback">U</span>
-                    </div>
-                    <input
-                      id="communitySearchInput"
-                      class="ps-input"
-                      placeholder="Busca por nombre o @usuario…"
-                      autocomplete="off"
-                      spellcheck="false"
-                    />
-                    <div class="ps-actions">
-                      <button
-                        id="btnCommunityClear"
-                        class="ps-icon"
-                        type="button"
-                        aria-label="Limpiar"
-                        title="Limpiar"
-                      >
-                        ×
-                      </button>
-                      <button
-                        id="btnCommunitySearch"
-                        class="ps-icon ps-icon--primary"
-                        type="button"
-                        aria-label="Buscar"
-                        title="Buscar"
-                      >
-                        
-                      </button>
-                    </div>
-                  </div>
-                  <div id="communitySearchStatus" class="hintSmall" style="margin-top: 6px"></div>
-                  <div id="communitySearchResults" class="friendList" style="margin-top: 8px"></div>
-                  <div class="hr"></div>
-                  <div class="subtitle" style="margin: 0">Agregar amigo</div>
-                  <div class="metaRow" style="margin-top: 8px; gap: 10px; flex-wrap: wrap">
-                    <input id="friendCodeSearch" class="input" placeholder="Codigo de amistad" style="max-width: 220px" />
-                    <button id="btnSendFriendRequest" class="btn-yellow" type="button">Enviar</button>
-                  </div>
-                  <div id="friendReqStatus" class="hintSmall" style="margin-top: 6px"></div>
-                  <div class="hr"></div>
-                  <div class="subtitle" style="margin: 0">Solicitudes pendientes</div>
-                  <div id="friendRequestsList" class="friendList" style="margin-top: 8px"></div>
-                  <div class="subtitle" style="margin-top: 14px">Amigos</div>
-                  <div id="friendsList" class="friendList" style="margin-top: 8px"></div>
-                  <div class="subtitle" style="margin-top: 14px">Bloqueados</div>
-                  <div id="blockedList" class="friendList" style="margin-top: 8px"></div>
-                </div>
-                <div class="communityCol">
-                  <div class="subtitle" style="margin: 0">Mensajes</div>
-                  <div class="muted" style="margin-top: 4px">
-                    Usa la nueva bandeja de mensajes para chats, grupos y soporte.
-                  </div>
-                  <div class="metaRow" style="margin-top: 10px; gap: 10px; flex-wrap: wrap">
-                    <a class="btn-yellow" href="mensajes.html">Abrir mensajes</a>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div id="referidos"></div>
-<div id="recompensas"></div>
-            <div class="card card--promo referral-card referral-card--compact" id="referralCard">
-            
-            <div class="sectionTitle" style="margin-top: 0">
-              Tengo código de un pana 
-            </div>
-            <div class="muted">
-              Compártelo con tus panas. Si lo usan, tú ganas algo también 
             </div>
 
-            <div
-              class="metaRow"
-              style="margin-top: 12px; gap: 10px; align-items: center"
-            >
-              <input
-                id="myRefCode"
-                class="input"
-                disabled
-                style="max-width: 220px; font-weight: 900"
-              />
-              <button
-                id="btnCopyMyRefCode"
-                class="btn-white-outline"
-                type="button"
-              >
-                Copiar
-              </button>
-            </div>
-
-            <div id="myRefInfo" class="hintSmall" style="margin-top: 8px"></div>
-
-            <div class="hr"></div>
-
-            <details class="refDetails">
-              <summary>Tengo código de un pana </summary>
-              <div class="muted">Escribe el código para asociarlo a tu cuenta.</div>
-              <div
-                class="metaRow"
-                style="
-                  margin-top: 10px;
-                  gap: 10px;
-                  align-items: center;
-                  flex-wrap: wrap;
-                "
-              >
-                <input
-                  id="useRefCode"
-                  class="input"
-                  placeholder="ej. MAGDAL-8F3K"
-                  style="max-width: 220px"
-                />
-                <button id="btnApplyRefCode" class="btn-yellow" type="button">
-                  Aplicar
-                </button>
-                <span id="applyRefStatus" class="hintSmall"></span>
+            <div class="card">
+              <div class="sectionTitle" style="margin-top: 0">Pasaporte</div>
+              <div class="muted">
+                Ruta cultural continua del curso, sin dividir por niveles.
               </div>
-            </details>
-
-            <div class="hr"></div>
-
-            <details class="refDetails">
-              <summary>Cómo van mis códigos</summary>
-              <div
-                class="metaRow"
-                style="margin-top: 10px; gap: 10px; flex-wrap: wrap"
-              >
-                <span id="refStatInvites">Recomendaciones: 0</span>
-                <span id="refStatRewards">Recompensas: 0</span>
+              <div class="metaRow" style="margin-top: 12px; gap: 10px; flex-wrap: wrap">
+                <a class="btn-white-outline" href="recompensas.html" style="text-decoration: none"
+                  >Abrir Pasaporte</a
+                >
               </div>
-              <div id="refRewardsList" class="muted" style="margin-top: 10px"></div>
-              <div
-                id="refRewardsActions"
-                class="muted"
-                style="margin-top: 10px"
-              ></div>
-            </details>
-            </div>
-            <div id="pagos"></div>
-            <div class="card promo-mini" id="promoMini">
-              <div class="promo-mini-title">Tú ganas 20%</div>
-              <div class="promo-mini-sub">Tu amigo 10%</div>
             </div>
           </div>
           </div>
@@ -392,7 +204,7 @@
             <div class="panelGrid">
               <div class="card">
                 <div class="sectionTitle" style="margin-top: 0">Nivel</div>
-                <div id="metaLevel" class="muted">—</div>
+                <div id="metaLevel" class="muted">â€”</div>
                 <div style="margin-top: 12px">
                   <label class="muted" style="font-weight: 900">Title</label>
                   <input id="metaTitle" type="text" />
@@ -405,7 +217,7 @@
 
               <div class="card">
                 <div class="sectionTitle" style="margin-top: 0">
-                  Botón / Tile
+                  BotÃ³n / Tile
                 </div>
                 <div class="metaRow">
                   <input
@@ -495,7 +307,7 @@
 
               <div class="card">
                 <div class="sectionTitle" style="margin-top: 0">
-                  Botón / Tile
+                  BotÃ³n / Tile
                 </div>
                 <div class="metaRow">
                   <input
@@ -563,9 +375,10 @@
       </div>
     </main>
 
-    <script type="module" src="assets/js/pages/panel-page.js?v=20260209a"></script>
+    <script type="module" src="assets/js/pages/panel-page.js?v=20260214i"></script>
   </body>
 </html>
+
 
 
 
