--- a/review.html
+++ b/review.html
@@ -8,7 +8,7 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700;800;900&family=Playfair+Display:wght@700;900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="assets/css/styles.css?v=20260214h" />
+    <link rel="stylesheet" href="assets/css/styles.css?v=20260214i" />
     <script src="assets/js/layout.js?v=20260214h" type="module"></script>
   </head>
 
@@ -25,6 +25,46 @@
               <div class="subtitle" id="reviewSubtitle" style="margin-top: 6px">
                 Mini-repasos para la memoria a largo plazo.
               </div>
+            </div>
+          </div>
+        </section>
+
+        <section class="panelOverviewGrid reviewOverviewGrid" id="practicarOverview" style="margin-top: 14px">
+          <div class="card" id="prLastActivityCard">
+            <div class="sectionTitle" style="margin-top: 0">Última actividad</div>
+            <div class="muted" id="prLastWhen">—</div>
+            <div style="margin-top: 10px; font-weight: 900" id="prLastTitle">—</div>
+            <div style="margin-top: 12px">
+              <a id="prLastLink" class="btn-white-outline" href="kurs-pl.html?level=A1&view=pro&flow=continuous">
+                Continuar
+              </a>
+            </div>
+          </div>
+
+          <div class="card" id="prProgressCard">
+            <div class="sectionTitle" style="margin-top: 0">Progreso</div>
+            <div class="metaRow" style="margin-top: 10px; gap: 10px; flex-wrap: wrap">
+              <span id="prProgTopics">Temas: -</span>
+              <span id="prProgCompleted">Completados: -</span>
+              <span id="prProgPractice">Práctica: -</span>
+              <span id="prProgTest">Test: -</span>
+            </div>
+            <div class="hintSmall" id="prProgLastActivity" style="margin-top: 8px">Última actividad: -</div>
+          </div>
+
+          <div class="card" id="prReviewCard">
+            <div class="sectionTitle" style="margin-top: 0">Repaso</div>
+            <div class="metaRow" style="margin-top: 10px; gap: 10px; flex-wrap: wrap">
+              <span id="prDue">Para hoy: -</span>
+              <span id="prOverdue">Atrasadas: -</span>
+              <span id="prNew">Nuevas: -</span>
+            </div>
+            <div class="hintSmall" id="prPlan" style="margin-top: 8px">Plan: -</div>
+            <div id="prWeek" class="reviewWeek" style="margin-top: 10px"></div>
+            <div class="metaRow" style="margin-top: 12px; gap: 10px; flex-wrap: wrap">
+              <a class="btn-yellow" href="review.html">Empezar 10 min</a>
+              <a class="btn-white-outline" href="flashcards.html">Fichas</a>
+              <span class="hintSmall" id="prReviewHint"></span>
             </div>
           </div>
         </section>
@@ -102,7 +142,7 @@
       </div>
     </main>
 
-    <script type="module" src="assets/js/pages/review-page.js?v=20260214h"></script>
+    <script type="module" src="assets/js/pages/review-page.js?v=20260214i"></script>
   </body>
 </html>
 
