--- a/ejercicio.html
+++ b/ejercicio.html
@@ -1,4 +1,4 @@
-<!doctype html>
+﻿<!doctype html>
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
@@ -11,8 +11,8 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700;800;900&family=Playfair+Display:wght@700;800;900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="assets/css/styles.css?v=20260214s" />
-    <script src="assets/js/layout.js?v=20260214h" type="module"></script>
+    <link rel="stylesheet" href="assets/css/styles.css?v=20260214z" />
+    <script src="assets/js/layout.js?v=20260214z" type="module"></script>
   </head>
 
   <body data-page="ejercicio">
@@ -158,6 +158,9 @@
           </h2>
           <div id="immersiveExerciseHost" class="immersiveExerciseHost"></div>
           <div class="immersiveNav">
+            <button class="btn-white-outline" id="btnImmHint" type="button" title="Pista" aria-label="Pista">
+              ?
+            </button>
             <button class="btn-white-outline" id="btnImmPrev" type="button">
               Anterior
             </button>
@@ -165,7 +168,7 @@
               Comprobar
             </button>
             <button class="btn-white-outline" id="btnImmDontKnow" type="button">
-              Nie wiem
+              No s&eacute;
             </button>
             <button class="btn-white-outline" id="btnResetCourse" type="button" style="display: none">
               Resetear curso
@@ -284,9 +287,8 @@
     </div>
 
     <script type="module" src="assets/js/content-protect.js"></script>
-    <script type="module" src="assets/js/pages/ejercicio-page.js?v=20260214r"></script>
+    <script type="module" src="assets/js/pages/ejercicio-page.js?v=20260214z"></script>
   </body>
 </html>
-
 
 
