--- a/espanel.html
+++ b/espanel.html
@@ -8,8 +8,8 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700;900&family=Playfair+Display:wght@700;900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="assets/css/styles.css?v=20260209a" />
-    <script src="assets/js/layout.js?v=20260209a" type="module"></script>
+    <link rel="stylesheet" href="assets/css/styles.css?v=20260214z" />
+    <script src="assets/js/layout.js?v=20260214z" type="module"></script>
   </head>
 
   <body data-page="panel">
@@ -27,10 +27,10 @@
                 </div>
                 <div>
                   <h1 class="glow-text" id="panelTitle" style="margin: 0; font-size: 44px">
-                    Â¡Buenas!
+                    Ã‚Â¡Buenas!
                   </h1>
                   <div class="muted" id="panelSubtitle" style="margin-top: 6px">
-                    AquÃ­ tienes tu libreta!<br />Â¡QuÃ© chimba verte!
+                    AquÃƒÂ­ tienes tu libreta!<br />Ã‚Â¡QuÃƒÂ© chimba verte!
                   </div>
                   <div class="metaRow" style="margin-top: 10px; gap: 10px; flex-wrap: wrap">
                     <button class="btn-white-outline" id="btnAvatarUpload" type="button">
@@ -52,7 +52,7 @@
                 <span
                   ><b id="userEmail">...</b>
                   <span id="adminBadge" style="margin-left: 10px"
-                    >(admin: â€”)</span
+                    >(admin: Ã¢â‚¬â€)</span
                   ></span
                 >
 
@@ -204,7 +204,7 @@
             <div class="panelGrid">
               <div class="card">
                 <div class="sectionTitle" style="margin-top: 0">Nivel</div>
-                <div id="metaLevel" class="muted">â€”</div>
+                <div id="metaLevel" class="muted">Ã¢â‚¬â€</div>
                 <div style="margin-top: 12px">
                   <label class="muted" style="font-weight: 900">Title</label>
                   <input id="metaTitle" type="text" />
@@ -217,7 +217,7 @@
 
               <div class="card">
                 <div class="sectionTitle" style="margin-top: 0">
-                  BotÃ³n / Tile
+                  BotÃƒÂ³n / Tile
                 </div>
                 <div class="metaRow">
                   <input
@@ -307,7 +307,7 @@
 
               <div class="card">
                 <div class="sectionTitle" style="margin-top: 0">
-                  BotÃ³n / Tile
+                  BotÃƒÂ³n / Tile
                 </div>
                 <div class="metaRow">
                   <input
@@ -375,11 +375,7 @@
       </div>
     </main>
 
-    <script type="module" src="assets/js/pages/panel-page.js?v=20260214i"></script>
+    <script type="module" src="assets/js/pages/panel-page.js?v=20260214z"></script>
   </body>
 </html>
-
-
-
-
 
