--- a/recompensas.html
+++ b/recompensas.html
@@ -1,8 +1,8 @@
-<!doctype html>
+﻿<!doctype html>
 <html lang="es">
   <head>
     <meta charset="utf-8" />
-    <title>Mis recompensas | AquiVivo</title>
+    <title>Pasaporte | AquiVivo</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700;800;900&family=Playfair+Display:wght@700;900&display=swap"
@@ -13,8 +13,8 @@
       href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
       crossorigin=""
     />
-    <link rel="stylesheet" href="assets/css/styles.css?v=20260209a" />
-    <script src="assets/js/layout.js?v=20260209a" type="module"></script>
+    <link rel="stylesheet" href="assets/css/styles.css?v=20260214z" />
+    <script src="assets/js/layout.js?v=20260214z" type="module"></script>
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" crossorigin=""></script>
   </head>
 
@@ -38,11 +38,10 @@
         <section class="card" style="margin-top: 12px">
           <div class="metaRow" style="justify-content: space-between; gap: 10px; flex-wrap: wrap">
             <div>
-              <div class="sectionTitle" style="margin-top: 0">Sellos</div>
+              <div class="sectionTitle" style="margin-top: 0">Ruta continua</div>
               <div class="muted" id="passportHint">Cargando...</div>
             </div>
             <div class="metaRow" style="gap: 10px; flex-wrap: wrap">
-              <select id="passportLevel" class="select" style="min-width: 160px"></select>
               <a class="btn-white-outline" href="espanel.html" style="text-decoration: none">Volver</a>
             </div>
           </div>
@@ -78,9 +77,10 @@
       </div>
     </div>
 
-    <script type="module" src="assets/js/pages/recompensas-page.js?v=20260212a"></script>
+    <script type="module" src="assets/js/pages/recompensas-page.js?v=20260214z"></script>
   </body>
 </html>
+
 
 
 
