--- a/referidos.html
+++ b/referidos.html
@@ -8,8 +8,8 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700;800;900&family=Playfair+Display:wght@700;900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="assets/css/styles.css?v=20260214t" />
-    <script src="assets/js/layout.js?v=20260214t" type="module"></script>
+    <link rel="stylesheet" href="assets/css/styles.css?v=20260214z" />
+    <script src="assets/js/layout.js?v=20260214z" type="module"></script>
   </head>
 
   <body data-page="referidos">
@@ -82,7 +82,7 @@
         <aside class="profile-side">
           <section class="card card--promo referral-card referral-card--compact" id="referralCard">
             <div class="sectionTitle" style="margin-top: 0">Tengo codigo de un pana</div>
-            <div class="muted">Compártelo con tus panas. Si lo usan, tú ganas algo tambien.</div>
+            <div class="muted">Compartelo con tus panas. Si lo usan, tu ganas algo tambien.</div>
 
             <div class="metaRow" style="margin-top: 12px; gap: 10px; align-items: center">
               <input
@@ -141,7 +141,9 @@
       </div>
     </main>
 
-    <script type="module" src="assets/js/pages/buscar-page.js?v=20260214t"></script>
-    <script type="module" src="assets/js/pages/amigos-page.js?v=20260214t"></script>
+    <script type="module" src="assets/js/pages/buscar-page.js?v=20260214z"></script>
+    <script type="module" src="assets/js/pages/amigos-page.js?v=20260214z"></script>
   </body>
 </html>
+
+
